css/darkMode.css
.dark,
.dark:hover {
  background-color: #13161c !important;
  color: #fff !important;
}

/* Ajustes al modo oscuro */
.dark #sideNav,
.dark nav,
.dark .navbar-brand,
.dark nav:hover {
  background-color: #010101 !important;
}

.dark p,
.dark p:hover,
.dark .fa-ul,
.dark .fa-ul:hover,
.dark .resume-content,
.dark .resume-content:hover,
.dark h3,
.dark h3:hover,
.dark b,
.dark b:hover,
.dark .subheading,
.dark .subheading:hover {
  background-color: #1e2229 !important;
  box-shadow:
    5px 0 0 0 #1e2229,
    -5px 0 0 0 #1e2229 !important;
  border-radius: 5px;
}

.dark hr {
  border-top: 1px dashed #f9fafb !important;
}

.dark #sideNav {
  border-right: 1px dashed #f9fafb !important;
}

.dark ul.horizontal li,
.dark ul.horizontal li a {
  background-color: #010101 !important;
  color: #f9fafb !important;
}
.dark .first-nav a {
  border-radius: 0 0 0 15px !important;
}
.dark .last-nav a {
  border-radius: 0 0 15px 0 !important;
}

.dark .sliderProjects button,
.dark .sliderProjects button span {
  color: #fff !important;
}

.dark .text-primary,
.dark .text-primary:hover,
.dark .text-primary:focus {
  color: #fff !important;
}

